--- a/SWEN1_MCTG/SWEN1_MCTG/SWEN1_MCTG.csproj
+++ b/SWEN1_MCTG/SWEN1_MCTG/SWEN1_MCTG.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Npgsql" Version="9.0.2" />
   </ItemGroup>
